--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-custom-tabs": "^0.1.7",
     "react-native-fast-image": "^7.0.2",
     "react-native-image-picker": "^1.1.0",
     "react-native-router-flux": "^4.0.6",
@@ -23,7 +24,11 @@
     "react-native-video": "^5.0.2",
     "react-native-video-controls": "git+https://github.com/ankitwandx/react-native-video-controls",
     "react-native-youtube": "^2.0.0",
-    "redux": "^4.0.4"
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
