--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.61.4",
     "react-native-fast-image": "^7.0.2",
     "react-native-image-picker": "^1.1.0",
+    "react-native-maps": "^0.26.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-twitter-signin": "^1.1.1",
     "react-native-vector-icons": "^6.6.0",
